--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,17 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@config/*": [
+        "config/*"
+      ],
+      "@core/*": [
+        "src/core/*"
+      ],
+      "@apps/*": [
+        "src/apps/*"
+      ],
+    }
   }
 }
