create middleware logs and winston service

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,7 +1,22 @@
 NEST_DEBUG=true
 
+# production || development || staging || local
 NODE_ENV=development
 
 SERVER_HOST="127.0.0.1"
 
 SERVER_PORT=3000
+
+APP_NAME="RMM"
+
+BASE_PATH_UPLOADS="storage/uploads"
+
+BASE_PATH_CACHES="tmp/caches"
+
+BASE_PATH_INDEXES="tmp/indexes"
+
+BASE_PATH_LOCALES="tmp/locales"
+
+BASE_PATH_LOGS="tmp/logs"
+
+BASE_PATH_SESSIONS="tmp/sessions"
