create utility lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,12 @@
       "@apps/*": [
         "src/apps/*"
       ],
+      "@rmm/utility": [
+        "libs/utility/src"
+      ],
+      "@rmm/utility/*": [
+        "libs/utility/src/*"
+      ]
     }
   }
 }
