--- a/config/.env.example
+++ b/config/.env.example
@@ -7,16 +7,37 @@ SERVER_HOST="127.0.0.1"
 
 SERVER_PORT=3000
 
-APP_NAME="RMM"
+APP_NAME="RMM API Starter"
 
+# paths
 BASE_PATH_UPLOADS="storage/uploads"
-
 BASE_PATH_CACHES="tmp/caches"
-
 BASE_PATH_INDEXES="tmp/indexes"
-
 BASE_PATH_LOCALES="tmp/locales"
-
 BASE_PATH_LOGS="tmp/logs"
-
 BASE_PATH_SESSIONS="tmp/sessions"
+BASE_PATH_CONFIG="config"
+
+# database
+DATABASE_DEFAULT_TYPE=mysql
+DATABASE_DEFAULT_HOST=127.0.0.1
+DATABASE_DEFAULT_PORT=3306
+DATABASE_DEFAULT_USERNAME=""
+DATABASE_DEFAULT_PASSWORD=""
+DATABASE_DEFAULT_DATABASE=""
+DATABASE_DEFAULT_ENTITIES=[]
+DATABASE_DEFAULT_SYNC=false
+DATABASE_DEFAULT_ENTITIES_AUTOLOAD=true
+DATABASE_LOGGING_ENABLED=true
+
+# PWD
+LOG_CUSTOM_ENABLED=false
+EXCEPTIONS_CUSTOM_ENABLED=false
+
+# openapi
+SWAGGER_ENABLED=true
+SWAGGER_ROUTE_PATH='api'
+SWAGGER_TITLE='API'
+SWAGGER_DESCRIPTION='API for testing, pocs or mvp projects'
+SWAGGER_VERSION='1.0'
+SWAGGER_HOST=http://localhost:3000
